--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,19 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
+//    packagingOptions {
+//        exclude 'META-INF/DEPENDENCIES'
+//        exclude 'META-INF/NOTICE'
+//        exclude 'META-INF/LICENSE'
+//        exclude 'META-INF/license.txt'
+//        exclude 'META-INF/notice.txt'
+//    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -26,6 +39,7 @@ allprojects {
     repositories {
         maven { url "https://jitpack.io" }
         maven { url "https://maven.fabric.io/public"}
+        maven { url 'https://maven.google.com' }
     }
 }
 
@@ -35,8 +49,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
-    compile 'com.firebaseui:firebase-ui-database:1.2.0'
+    compile 'com.firebaseui:firebase-ui-auth:2.3.0'
+    compile 'com.firebaseui:firebase-ui-database:2.3.0'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
@@ -49,6 +63,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.android.support:multidex:1.0.0'
     testCompile 'junit:junit:4.12'
 }
 
