--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,11 @@ allprojects {
     repositories {
         maven { url "https://jitpack.io" }
         maven { url "https://maven.fabric.io/public"}
-        maven { url 'https://maven.google.com' }
+        //maven { url 'https://maven.google.com' }
+    }
+    tasks.withType(JavaCompile){
+        sourceCompatibility = "1.7"
+        targetCompatibility = "1.7"
     }
 }
 
@@ -49,8 +53,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.firebaseui:firebase-ui-auth:2.3.0'
-    compile 'com.firebaseui:firebase-ui-database:2.3.0'
+    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
+    compile 'com.firebaseui:firebase-ui-database:1.2.0'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
@@ -59,11 +63,11 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.firebase:firebase-database:11.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.google.android.gms:play-services-maps:11.0.1'
-    compile 'com.google.android.gms:play-services-location:11.0.1'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
     testCompile 'junit:junit:4.12'
 }
 
